@@ -1,5 +1,5 @@
-/*[INCLUDE-IF JAVA_SPEC_VERSION >= 19]*/
-/*******************************************************************************
+/*[INCLUDE-IF JAVA_SPEC_VERSION >= 20]*/
+/*
  * Copyright IBM Corp. and others 2021
  *
  * This program and the accompanying materials are made available under
@@ -18,23 +18,24 @@
  * [1] https://www.gnu.org/software/classpath/license.html
  * [2] https://openjdk.org/legal/assembly-exception.html
  *
- * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
- *******************************************************************************/
+ * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0-only WITH Classpath-exception-2.0 OR GPL-2.0-only WITH OpenJDK-assembly-exception-1.0
+ */
 package jdk.internal.foreign.abi;
 
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodType;
 
+/*[IF JAVA_SPEC_VERSION >= 21]*/
+import java.lang.foreign.Arena;
+/*[ENDIF] JAVA_SPEC_VERSION >= 21 */
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.MemorySegment;
-/*[IF JAVA_SPEC_VERSION >= 20]*/
-import java.lang.foreign.SegmentScope;
-/*[ELSE] JAVA_SPEC_VERSION >= 20 */
-import java.lang.foreign.MemorySession;
-/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 /*[IF JAVA_SPEC_VERSION >= 21]*/
 import jdk.internal.foreign.abi.AbstractLinker.UpcallStubFactory;
+/*[ELSE] JAVA_SPEC_VERSION >= 21 */
+import java.lang.foreign.SegmentScope;
 /*[ENDIF] JAVA_SPEC_VERSION >= 21 */
+import jdk.internal.foreign.abi.LinkerOptions;
 import openj9.internal.foreign.abi.InternalUpcallHandler;
 
 /**
@@ -48,16 +49,21 @@ public final class UpcallLinker {
 	/* The constructor creates an upcall handler specific to the requested java method
 	 * by generating a native thunk in upcall on a given platform.
 	 */
-	/*[IF JAVA_SPEC_VERSION >= 20]*/
-	UpcallLinker(MethodHandle target, MethodType mt, FunctionDescriptor cDesc, SegmentScope session)
-	/*[ELSE] JAVA_SPEC_VERSION >= 20 */
-	UpcallLinker(MethodHandle target, MethodType mt, FunctionDescriptor cDesc, MemorySession session)
-	/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
+	/*[IF JAVA_SPEC_VERSION >= 21]*/
+	UpcallLinker(MethodHandle target, MethodType methodType, FunctionDescriptor descriptor, Arena arena, LinkerOptions options)
 	{
-		InternalUpcallHandler internalUpcallHandler = new InternalUpcallHandler(target, mt, cDesc, session);
+		InternalUpcallHandler internalUpcallHandler = new InternalUpcallHandler(target, methodType, descriptor, arena, options);
 		/* The thunk address must be set given entryPoint() is used in OpenJDK. */
 		thunkAddr = internalUpcallHandler.upcallThunkAddr();
 	}
+	/*[ELSE] JAVA_SPEC_VERSION >= 21 */
+	UpcallLinker(MethodHandle target, MethodType methodType, FunctionDescriptor descriptor, SegmentScope scope)
+	{
+		InternalUpcallHandler internalUpcallHandler = new InternalUpcallHandler(target, methodType, descriptor, scope);
+		/* The thunk address must be set given entryPoint() is used in OpenJDK. */
+		thunkAddr = internalUpcallHandler.upcallThunkAddr();
+	}
+	/*[ENDIF] JAVA_SPEC_VERSION >= 21 */
 
 	/**
 	 * Returns the address of the generated thunk at runtime.
@@ -68,50 +74,79 @@ public final class UpcallLinker {
 		return thunkAddr;
 	}
 
-	/*[IF JAVA_SPEC_VERSION >= 20]*/
+	/*[IF JAVA_SPEC_VERSION >= 21]*/
 	/**
-	 * The method invoked via Clinker generates a native thunk to create
+	 * The method invoked via Linker generates a native thunk to create
 	 * a native symbol that holds an entry point to the native function
 	 * intended for the requested java method in upcall.
 	 *
-	 * @param target The upcall method handle to the requested java method
-	 * @param mt The MethodType of the upcall method handle
-	 * @param cDesc The FunctionDescriptor of the upcall method handle
-	 * @param session The SegmentScope of the upcall method handle
+	 * @param target the upcall method handle to the requested java method
+	 * @param methodType the MethodType of the upcall method handle
+	 * @param descriptor the FunctionDescriptor of the upcall method handle
+	 * @param arena the Arena of the upcall method handle
+	 * @param options the LinkerOptions indicating additional linking requirements to the linker
 	 * @return the native symbol
 	 */
-	public static MemorySegment make(MethodHandle target, MethodType mt, FunctionDescriptor cDesc, SegmentScope session)
-	/*[ELSE] JAVA_SPEC_VERSION >= 20 */
-	/**
-	 * The method invoked via Clinker generates a native thunk to create
-	 * a native symbol that holds an entry point to the native function
-	 * intended for the requested java method in upcall.
-	 *
-	 * @param target The upcall method handle to the requested java method
-	 * @param mt The MethodType of the upcall method handle
-	 * @param cDesc The FunctionDescriptor of the upcall method handle
-	 * @param session The MemorySession of the upcall method handle
-	 * @return the native symbol
-	 */
-	public static MemorySegment make(MethodHandle target, MethodType mt, FunctionDescriptor cDesc, MemorySession session)
-	/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
+	public static MemorySegment make(MethodHandle target, MethodType methodType, FunctionDescriptor descriptor, Arena arena, LinkerOptions options)
 	{
-		UpcallLinker upcallLinker = new UpcallLinker(target, mt, cDesc, session);
-		return UpcallStubs.makeUpcall(upcallLinker.entryPoint(), session);
+		UpcallLinker upcallLinker = new UpcallLinker(target, methodType, descriptor, arena, options);
+		return UpcallStubs.makeUpcall(upcallLinker.entryPoint(), arena);
 	}
+	/*[ELSE] JAVA_SPEC_VERSION >= 21 */
+	/**
+	 * The method invoked via Linker generates a native thunk to create
+	 * a native symbol that holds an entry point to the native function
+	 * intended for the requested java method in upcall.
+	 *
+	 * @param target the upcall method handle to the requested java method
+	 * @param methodType the MethodType of the upcall method handle
+	 * @param descriptor the FunctionDescriptor of the upcall method handle
+	 * @param scope the segment scope of the upcall method handle
+	 * @return the native symbol
+	 */
+	public static MemorySegment make(MethodHandle target, MethodType methodType, FunctionDescriptor descriptor, SegmentScope scope)
+	{
+		UpcallLinker upcallLinker = new UpcallLinker(target, methodType, descriptor, scope);
+		return UpcallStubs.makeUpcall(upcallLinker.entryPoint(), scope);
+	}
+	/*[ENDIF] JAVA_SPEC_VERSION >= 21 */
 
 	/*[IF JAVA_SPEC_VERSION >= 21]*/
 	/**
-	 * A stub method to be implemented.
+	 * A stub method intended in OpenJDK to support compilation.
 	 *
-	 * @param targetType
-	 * @param abi
-	 * @param callingSequence
-	 * @return
-	 * @throws UnsupportedOperationException
+	 * Note:
+	 * SharedUtils.arrangeUpcallHelper() (totally featured with the
+	 * signatures intended for OpenJDK) calls this method which
+	 * is specific to the upcall specific code implemented in
+	 * OpenJDK. To work around this case during the compilation,
+	 * this stub method serves as a placeholder to minimize the
+	 * changes in OpenJDK.
+	 *
+	 * @param methodType the MethodType of the upcall method handle
+	 * @param abi the descriptor of the Application Binary Interface (ABI) on a given platform
+	 * @param callingSequence the calling sequence converted by CallArranger from a C FunctionDescriptor
+	 * @return a factory instance that wraps up the upcall specific code
+	 * @throws UnsupportedOperationException in the case of the OpenJDK implementation for upcall
 	 */
-	public static UpcallStubFactory makeFactory(MethodType targetType, ABIDescriptor abi, CallingSequence callingSequence) {
+	public static UpcallStubFactory makeFactory(MethodType methodType, ABIDescriptor abi, CallingSequence callingSequence) {
 		throw new UnsupportedOperationException();
+	}
+
+	/**
+	 * The method constructs a factory instance (introduced in JDK21 to support the
+	 * sharing of function descriptors) which wraps up the existing upcall specific
+	 * code implemented in OpenJ9 to enable the callback in OpenJDK.
+	 *
+	 * @param methodType the MethodType of the upcall method handle
+	 * @param descriptor the FunctionDescriptor of the upcall method handle
+	 * @param options the LinkerOptions indicating additional linking requirements to the linker
+	 * @return a factory instance that wraps up the upcall specific code
+	 */
+	public static UpcallStubFactory makeFactory(MethodType methodType, FunctionDescriptor descriptor, LinkerOptions options) {
+		return (target, arena) -> {
+			return UpcallLinker.make(target, methodType, descriptor, arena, options);
+		};
 	}
 	/*[ENDIF] JAVA_SPEC_VERSION >= 21 */
 }
